# DomainCamelConverter

./: app.py  generate_favicon.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: main.js
templates/: index.html
